--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,8 @@
     "type": "project",
     "require": {
         "php": ">=5.5.9",
-        "laravel/framework": "5.2.*"
+        "laravel/framework": "5.2.*",
+        "ixudra/curl": "6.*"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
@@ -20,7 +21,7 @@
             "database"
         ],
         "psr-4": {
-            "App\\": "app/"
+            "Poketracker\\": "app/"
         }
     },
     "autoload-dev": {
